Option to skip symbolic links

Option to ignore symbolic links is added. Thanks to Rik for the patch.

BUG: 223065
BUG: 248040