Settings/SettingsData.cpp
@@ -153,6 +153,7 @@ property_ref ( backend               , setBackend               , QString       
 property_copy( useEXIFRotate         , setUseEXIFRotate         , bool          , General, true                       )
 property_copy( useEXIFComments       , setUseEXIFComments       , bool          , General, true                       )
 property_copy( searchForImagesOnStart, setSearchForImagesOnStart, bool          , General, true                       )
+property_copy( skipSymlinks,           setSkipSymlinks          , bool          , General, false                      )
 property_copy( skipRawIfOtherMatches , setSkipRawIfOtherMatches , bool          , General, false                      )
 property_copy( useRawThumbnail       , setUseRawThumbnail       , bool          , General, false                      )
 property_copy( useRawThumbnailSize   , setUseRawThumbnailSize   , QSize         , General, QSize(1024,768)            )
